--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -326,6 +326,7 @@ button {
     color: rgba(0, 0, 0, 0.3);
     top: 12px;
 }
+
 ._1M3wR, ._3Burg, ._1lTg8, ._2xarx {
     position: absolute;
     z-index: 100;
@@ -438,6 +439,88 @@ button {
     user-select: text;
     white-space: pre-wrap;
     word-wrap: break-word;
+}
+
+/*emoji*/
+
+
+.emoji-invoker {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all 0.2s;
+    color: var(--icon);
+}
+
+.emoji-invoker:hover {
+    transform: scale(1.1);
+}
+
+.emoji-invoker > svg {
+    fill: #b1c6d0;
+}
+
+.emoji-picker {
+    top: 45px  !important;
+    left: 0 !important;
+    position: absolute;
+    z-index: 999;
+    font-family: Montserrat;
+    border: 1px solid #ccc;
+    width: 15rem;
+    height: 20rem;
+    overflow: scroll;
+    padding: 1rem;
+    box-sizing: border-box;
+    border-radius: 0.5rem;
+    background: #fff;
+    box-shadow: 1px 1px 8px #c7dbe6;
+}
+
+.emoji-picker__search {
+    display: flex;
+}
+
+.emoji-picker__search > input {
+    flex: 1;
+    border-radius: 10rem;
+    border: 1px solid #ccc;
+    padding: 0.5rem 1rem;
+    outline: none;
+}
+
+.emoji-picker h5 {
+    margin-bottom: 0;
+    color: #b1b1b1;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    cursor: default;
+}
+
+.emoji-picker .emojis {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.emoji-picker .emojis:after {
+    content: "";
+    flex: auto;
+}
+
+.emoji-picker .emojis span {
+    padding: 0.2rem;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.emoji-picker .emojis span:hover {
+    background: #ececec;
+    cursor: pointer;
 }
 
 
@@ -928,6 +1011,7 @@ html[dir] .YUoyu {
 ._9tCEa {
     transition: padding-left 0.3s cubic-bezier(0.69, 0, 0.79, 0.14);
     padding-left: 0;
+    outline: none;
 }
 
 ._9tCEa {
