--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -38,7 +38,8 @@ html, body {
 
 
 .h70RQ {
-    animation: _2rw5W 0.3s cubic-bezier(0.1, 0.82, 0.25, 1);
+    -webkit-animation: slide-in-bck-center .7s cubic-bezier(.25, .46, .45, .94) both;
+    animation: slide-in-bck-center .7s cubic-bezier(.25, .46, .45, .94) both;
     background-position: top left;
     left: 0;
     background-color: #f7f7f7;
@@ -72,6 +73,8 @@ html, body {
     outline: none;
     position: relative;
     overflow: hidden;
+    -webkit-animation: slide-in-bck-center .7s cubic-bezier(.25, .46, .45, .94) both;
+    animation: slide-in-bck-center .7s cubic-bezier(.25, .46, .45, .94) both
 }
 
 .B5rWa {
@@ -465,7 +468,7 @@ button {
 }
 
 .emoji-picker {
-    top: 45px  !important;
+    top: 45px !important;
     left: 0 !important;
     position: absolute;
     z-index: 999;
@@ -1064,6 +1067,37 @@ html[dir] .YUoyu {
     position: relative;
 }
 
+
+._2F4Rh {
+    padding: 3px;
+}
+
+._2F4Rh {
+    box-sizing: border-box;
+    max-width: 336px;
+    position: relative;
+    z-index: 1;
+}
+
+.gDOmN {
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.gDOmN {
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    max-width: 100%;
+}
+
+._1YbLB {
+    flex: none;
+    -webkit-transition: -webkit-filter 0.16s linear;
+}
+
 /*message-in*/
 .message-in {
     align-items: flex-start;
@@ -1193,6 +1227,30 @@ svg:not(:root) {
     vertical-align: top;
 }
 
+._1uFFm {
+    right: 8px;
+}
+
+._1uFFm {
+    position: absolute;
+    bottom: 6px;
+    z-index: 2;
+}
+
+._2Pjvv {
+    color: rgba(var(--inverse-rgb), 0.9);
+}
+
+._2hrew {
+    line-height: 17px;
+}
+
+._1DZAH {
+    font-size: 11px;
+    height: 15px;
+    line-height: 15px;
+    white-space: nowrap;
+}
 
 /* message-out */
 .message-out {
@@ -1246,7 +1304,6 @@ svg:not(:root) {
 }
 
 ._1DZAH {
-    color: rgba(0, 0, 0, 0.45);
     font-size: 11px;
     height: 15px;
     line-height: 15px;
@@ -1455,6 +1512,8 @@ svg:not(:root) {
     flex: 0 0 auto;
     opacity: 0.9;
     color: #919191;
+    -webkit-animation: roll-in-blurred-left .65s cubic-bezier(.23, 1.000, .32, 1.000) both;
+    animation: roll-in-blurred-left .65s cubic-bezier(.23, 1.000, .32, 1.000)
 }
 
 
@@ -1503,7 +1562,7 @@ svg:not(:root) {
 }
 
 [data-asset-intro-image] {
-    background-image: url('https://web.whatsapp.com/img/intro-connection_c98cc75f2aa905314d74375a975d2cf2.jpg');
+    background-image: url('../intro-connection.jpg');
 }
 
 ._2LKlu {
@@ -1578,4 +1637,332 @@ svg:not(:root) {
 a {
     text-decoration: none;
     color: #039BE5;
+}
+
+
+/* media preview*/
+
+
+._2vPAk {
+    left: 0;
+    right: 0;
+}
+
+._2vPAk {
+    bottom: 0;
+    position: absolute;
+    top: 0;
+}
+
+.JWJN5 {
+    background-color: var(--media-viewer-background);
+    padding-bottom: 100px;
+}
+
+.overlay {
+    left: 0;
+}
+
+.JWJN5 {
+    display: flex;
+    flex-direction: column;
+    z-index: 500;
+}
+
+.overlay {
+    height: 100%;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+._3pRd1 {
+    background-color: var(--media-viewer-background);
+}
+
+._3pRd1 {
+    flex: none;
+    height: 60px;
+    transition: visibility 300ms, opacity 300ms cubic-bezier(0.1, 0.82, 0.25, 1);
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+}
+
+._20PqB {
+    margin-left: 5px;
+    margin-right: 15px;
+}
+
+._20PqB {
+    flex: 1 1 auto;
+    order: 2;
+    overflow: hidden;
+}
+
+._2EXPL {
+    background-color: var(--background-default);
+    cursor: pointer;
+}
+
+._2EXPL.ts7je {
+    height: 60px;
+}
+
+._2EXPL {
+    display: flex;
+    flex-direction: row;
+    height: 72px;
+    pointer-events: all;
+    position: relative;
+}
+
+.dIyEr {
+    padding: 0 15px 0 13px;
+}
+
+.dIyEr {
+    margin-top: -1px;
+}
+
+.dIyEr {
+    flex: none;
+    display: flex;
+    align-items: center;
+}
+
+._1WliW {
+    border-radius: 50%;
+    background-color: var(--avatar-background);
+}
+
+._1WliW {
+    position: relative;
+    overflow: hidden;
+}
+
+.Qgzj8 {
+    border-radius: 50%;
+}
+
+.Qgzj8.gqwaM {
+    opacity: 1;
+}
+
+.Qgzj8 {
+    display: block;
+    opacity: 0;
+    position: relative;
+    transition: opacity 150ms ease-out;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    overflow: hidden;
+}
+
+._3ZW2E {
+    left: 0;
+}
+
+._3ZW2E {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+}
+
+._2EXPL.ts7je ._3j7s9 {
+    border-top: none;
+}
+
+html[dir=ltr] ._3j7s9 {
+    padding-right: 15px;
+}
+
+html[dir] ._3j7s9 {
+    border-top: 1px solid var(--border-list);
+}
+
+._3j7s9 {
+    flex-grow: 1;
+    flex-basis: auto;
+    min-width: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+._2FBdJ {
+    text-align: left;
+}
+
+._2FBdJ {
+    align-items: center;
+    line-height: normal;
+    display: flex;
+}
+
+._2EXPL.ts7je ._25Ooe {
+    color: var(--primary-stronger);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 20px;
+}
+
+._25Ooe {
+    text-align: left;
+}
+
+._25Ooe {
+    font-size: 16px;
+}
+
+._25Ooe {
+    color: var(--primary-strong);
+    display: flex;
+    flex-grow: 1;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 21px;
+    overflow: hidden;
+}
+
+._1wjpf {
+    flex-grow: 1;
+    overflow: hidden;
+    position: relative;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+._3FXB1 {
+    visibility: visible;
+}
+
+._1AwDx {
+    margin-top: 2px;
+}
+
+._1AwDx {
+    align-items: center;
+    color: var(--secondary);
+    display: flex;
+    font-size: 13px;
+    line-height: 20px;
+    min-height: 20px;
+}
+
+._2EXPL.ts7je ._itDl {
+    font-size: 13px;
+}
+
+._itDl {
+    text-align: left;
+}
+
+._itDl {
+    background-color: transparent;
+}
+
+._itDl {
+    flex-grow: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+._1_wiy {
+    margin-right: 18px;
+}
+
+._1_wiy {
+    order: 1;
+}
+
+._30525 {
+    color: var(--icon-strong);
+}
+
+._3Kxus {
+    display: flex;
+    align-items: center;
+}
+
+._3vXNW {
+    padding: 10px 0 15px 0;
+}
+
+._3vXNW {
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    height: calc(100% - 60px);
+    box-sizing: border-box;
+}
+
+._1cVDK {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 0;
+}
+
+.IuYNx {
+    left: 0;
+}
+
+._2gmeM {
+    overflow: visible;
+}
+
+._3E6Ha {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: visible;
+}
+
+._1V8K0 {
+    position: relative;
+}
+
+.IuYNx {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+}
+
+.rN9sv {
+    z-index: 2;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+_2-V0A {
+    cursor: zoom-in;
+}
+
+.rN9sv {
+    z-index: 2;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
 }
